My Legos has an index route that displays

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <%- include('partials/nav') %> <%- body %>
+    <%- include('../partials/nav') %> <%- body %>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
