index route, new route, create routes working for Legos

--- a/views/legos/new.ejs
+++ b/views/legos/new.ejs
@@ -1,4 +1,4 @@
-<h2>New Collection</h2>
+<h2>New Lego Group</h2>
 <form action="/collections" method="POST">
     <div class="form-group">
         <label for="name">NAME</label>
