--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,3 +1,7 @@
-<li class="nav-item active">
+
+<ul><li class="nav-item active">
+  <a class="nav-link" href="/mylegos">My Legos</a>
+</li>
+  <li class="nav-item active">
     <a class="nav-link" href="/sets/new">Add New Set</a>
-  </li>
+  </li></ul>
