--- a/views/legos/index.ejs
+++ b/views/legos/index.ejs
@@ -2,6 +2,6 @@
 
 <ul>
   <% myLegos.sets.forEach(set => { %>
-  <li><a href="/collections/mylegos/<%= set.id %>"><%= set.name %></a></li>
+  <li><a href="/legos/mylegos/<%= set.id %>"><%= set.name %></a></li>
   <% }); %>
 </ul>
