--- a/views/sets/new.ejs
+++ b/views/sets/new.ejs
@@ -14,7 +14,7 @@
   </div>
   <div class="form-group">
     <label for="originalCost">Cost</label>
-    <input type="text" class="form-control" id="originalCost" name="originalCost" />
+    <input type="number" class="form-control" id="originalCost" name="originalCost" />
   </div>
   <div class="form-group">
     <label for="setComplete">Is the set complete?</label>
