pages displaying some minimal CSS through public folder and two partials

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 
 <ul><li class="nav-item active">
-  <a class="nav-link" href="/mylegos">My Legos</a>
+  <a class="nav-link" href="/legos/mylegos">My Legos</a>
 </li>
   <li class="nav-item active">
     <a class="nav-link" href="/sets/new">Add New Set</a>
