working sets show route

--- a/views/legos/new.ejs
+++ b/views/legos/new.ejs
@@ -1,5 +1,5 @@
 <h2>New Lego Group</h2>
-<form action="/collections" method="POST">
+<form action="/legos" method="POST">
     <div class="form-group">
         <label for="name">NAME</label>
         <input type="text" class="form-control" id="name" name="name" />
