--- a/views/sets/show.ejs
+++ b/views/sets/show.ejs
@@ -1,5 +1,5 @@
 
-<h4>My Lego Sets Detail or Show Page</h4>
+<h4><%= set.name %> Detail or Show Page</h4>
 <p>
   Name: <%= set.name %><br> 
   Theme: <%= set.theme %><br> 
