--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,18 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/">Legos</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-<ul><li class="nav-item active">
-  <a class="nav-link" href="/legos/mylegos">My Legos</a>
-</li>
-  <li class="nav-item active">
-    <a class="nav-link" href="/sets/new">Add New Set</a>
-  </li></ul>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/legos/mylegos">My Legos</a>
+      <li class="nav-item">
+        <a class="nav-link" href="/sets/new">Add New Set</a>
+      </li>
+      </li>
+    </ul>
+  </div>
+</nav>
