--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,3 +10,15 @@ body {
 nav.navbar {
     background: yellow;
 }
+a.navbar:hover {
+    color:blueviolet;
+}
+.navbar-brand {
+    background: url(/images/lego_bkgd_img.png);
+    background-size: 200px;
+    color: white;
+    font-size: 25px;
+    padding: 20px;
+    text-decoration: cornflowerblue;
+   
+}
