--- a/views/sets/edit.ejs
+++ b/views/sets/edit.ejs
@@ -3,7 +3,9 @@
 <form action="/legos/mylegos/<%=set.id%>?_method=PUT" method="POST">
 <label for="name">Name:</label>
 <input type="text" name="name" value="<%set.name%>" />
+<label for="theme">Theme:</label>
+<input type="text" name="theme" value="<%set.theme%>" />
 <input type="submit" value="Submit">
 </form>
-<button type="button" name="button"><a href="/mylegos">Back</a></button>
+<button type="button" name="button"><a href="/legos/mylegos/<%=set.id%>">Back</a></button>
 </div>
