--- a/views/sets/show.ejs
+++ b/views/sets/show.ejs
@@ -18,4 +18,7 @@
   <span> No </span>
   <% } %>
 </p>
+<form action="/legos/mylegos/<%=set.id%>?method=DELETE" method="POST">
+  <input type="submit" value="DELETE SET" />
+  </form>
 <button type="button" name="button"><a href="/legos/mylegos">Back to My Legos</a></button>
