--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,7 @@
-<h2>Our Legos</h2>
+<h4>My Collections</h4>
+<ul>
+    
+    <li><a href="/legos/mylegos">My Legos</a></li>
+    <li><a href="/legos/mywishlist">My Wishlist</a></li>
+  </ul>
+ 
