--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -10,7 +10,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/legos/mylegos">My Legos</a>
       <li class="nav-item">
-        <a class="nav-link" href="/sets/new">Add New Set</a>
+        <a class="nav-link" href="/legos/mywishlist">My Wishlist</a>
       </li>
       </li>
     </ul>
