new issue with edit form

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,8 @@
-<h4>My Collections</h4>
-<ul>
+   <div class="jumbotron">
+    <h4>“What it is is beautiful!”</h4>
+    <p>
+      Have you ever seen anything like it? And look at that look on her face. That’s pride smiling.  Not just what she’s made but how proud its made her. It’s a look you’ll see whenever children build something all by themselves. No matter what they’ve created. <img src="/images/lego_main.jpeg" class="img-responsive"></p>
     
-    <li><a href="/legos/mylegos">My Legos</a></li>
-    <li><a href="/legos/mywishlist">My Wishlist</a></li>
-  </ul>
- 
+    <p><a class="btn btn-primary btn-sm" href="/sets" role="button">View All Sets</a></p>
+  </div>
+  
