--- a/views/sets/edit.ejs
+++ b/views/sets/edit.ejs
@@ -5,6 +5,15 @@
 <input type="text" name="name" value="<%set.name%>" />
 <label for="theme">Theme:</label>
 <input type="text" name="theme" value="<%set.theme%>" />
+<label for="desc">Description:</label>
+<input type="text" name="desc" value="<%set.desc%>" />
+<label for="originalCost">Original Price</label>
+<input type="number" name="originalCost" value="<%set.originalCost%>" />
+<label for="resaleCost">Recommended Resale Cost:</label>
+<input type="number" name="resaleCost" value="<%set.resaleCost%>" />
+<label for="image">Add Image URL:</label>
+<input type="text" name="image" value="<%set.image%>" />
+
 <input type="submit" value="Submit">
 </form>
 <button type="button" name="button"><a href="/legos/mylegos/<%=set.id%>">Back</a></button>
