current data and project

--- a/views/sets/index.ejs
+++ b/views/sets/index.ejs
@@ -7,6 +7,6 @@
   <br/>
   <ul>
     <% sets.forEach(set => { %>
-    <li><a href="/<%= set.id %>"><%= set.name %></a></li>
+    <li><a href="legos/mylegos/<%= set.id %>"><%= set.name %></a></li>
     <% }); %>
   </ul>
