--- a/views/legos/index.ejs
+++ b/views/legos/index.ejs
@@ -1,17 +1,13 @@
-<div class="content">
-<div class="title"><h4>My Legos</h4>
+<h4>My Legos</h4>
 <button type="button" name="button">
-<a href="/sets/new">Add Set</a>
+  <a href="/sets/new">Add Set</a>
 </button></div>
-<br/>
+<br />
+<div class="content">
 
   <% myLegos.sets.forEach(set => { %>
-    <div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-4">
-          <div class="card">
-      <a href="/legos/mylegos/<%= set.id %>" class="img-card"><img src="<%= set.image %>" ><%= set.name %></a>
-    </div></div></div></div>
-  <% }); %>
 
+  <p class="col-md-4"><a href="/legos/mylegos/<%= set.id %>"><img class="index-img" src="<%= set.image %>"><%= set.name %></a></p>
+  <% }); %>
+</div>
 </div>
